--- a/website/package.json
+++ b/website/package.json
@@ -1,14 +1,17 @@
 {
   "scripts": {
-    "examples": "docusaurus-examples",
-    "start": "docusaurus-start",
-    "build": "docusaurus-build",
-    "publish-gh-pages": "docusaurus-publish",
-    "write-translations": "docusaurus-write-translations",
-    "version": "docusaurus-version",
-    "rename-version": "docusaurus-rename-version"
+    "start": "docusaurus start",
+    "build": "docusaurus build",
+    "swizzle": "docusaurus swizzle",
+    "deploy": "docusaurus deploy"
   },
   "devDependencies": {
-    "docusaurus": "^1.13.0"
+    "@docusaurus/core": "2.0.0-alpha.34",
+    "@docusaurus/preset-classic": "2.0.0-alpha.34",
+    "react": "next",
+    "react-dom": "next"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6"
   }
 }
